<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@android:color/black"
        android:fitsSystemWindows="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/twh"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/very_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_disp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_ptk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:hint="@string/masukkan_nomor_ptk"
                android:layout_marginHorizontal="@dimen/large"
                android:layout_marginTop="@dimen/very_large"
                android:layout_marginBottom="@dimen/medium"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/white"
                app:boxCornerRadiusBottomEnd="@dimen/small"
                app:boxCornerRadiusBottomStart="@dimen/small"
                app:boxCornerRadiusTopEnd="@dimen/small"
                app:boxCornerRadiusTopStart="@dimen/small"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:counterMaxLength="14"
                app:counterTextColor="@color/white"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_ptk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courier_new"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/white"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cari"
                app:cornerRadius="@dimen/medium"
                android:paddingHorizontal="@dimen/very_large"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:paddingVertical="@dimen/small"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:textColor="#cfd8dc"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_marginBottom="@dimen/small"/>
    </RelativeLayout>
</FrameLayout>